--- a/about.html
+++ b/about.html
@@ -5,6 +5,6 @@ title: About
 ---
 ## About
 
-I work at Microsoft as a Cloud Architect, helping our Service Provider partners use Microsoft Azure both for their internal projects as well as building services for their customers.
+I work at Microsoft as a Cloud Architect, helping our Service Provider partners use Microsoft Azure  for their internal projects as well as building services for their customers.  
 You can currently find me in Frankfurt, or traveling around the world meeting customers and partners.
-I Love technology, LEGO, the sea, great Portuguese food and the greatest football club on earth, Benfica.
+I love technology, gadgets, collecting and building LEGO, the sea, great Portuguese food and the greatest football team on earth, Benfica.
