--- a/contributions.html
+++ b/contributions.html
@@ -5,7 +5,7 @@ title: Contributions
 ---
 ## Contributions
 
-Here you can find some of my work and contributions, some public, some private:  
+Here you can find some of my written work and public/private presentations and conference appearances:  
 
 Whitepaper: [Windows Server 2012 IaaS Product Line Architecture Fabric Architecture Guide][1]  
 Teched Europe 2013: [Lessons learned from implementing Windows Server 2012 and System Center 2012 SP1 for Hosters (Service Providers)][2]  
