--- a/contact.html
+++ b/contact.html
@@ -5,4 +5,4 @@ title: Contact
 ---
 ## Contact
 
-You can reach me on GitHub, Twitter or LinkedIn. Or if good old email is preferred, say something.
+You can reach me on GitHub, Twitter or LinkedIn.
